--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
 body {
-  background-image: url("../assets/dots.gif");
+  background-image: url("/assets/dots.gif");
   background-repeat: repeat;
 }
