--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
 body {
-  background-image: url("/assets/placeholder.gif");
+  background-image: url("/assets/backgrounds/tiling/Texture_wood_017.jpg");
   background-repeat: repeat;
 }
